--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -244,6 +244,7 @@ $hand: pointer;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+
     span {
         display: block;
         width: 48px;
@@ -257,11 +258,15 @@ $hand: pointer;
         display: block;
         width: 120px;
         text-align: center;
+        color: #111;
     }
     a:hover {
         cursor: $hand;
         color: $red;
     }
+    // a:visited {
+    //     color: #111;
+    // }
     @for $a from 1 to 11 {
         a:nth-of-type(#{$a}) span:nth-child(1) {
             $b: ($a - 1) * -60px;
@@ -450,5 +455,8 @@ $hand: pointer;
             background-size: 100%;
             margin-bottom: 5px;
         }
+    }
+    .top {
+        display: none;
     }
 }
