--- a/src/sass/list.scss
+++ b/src/sass/list.scss
@@ -1,9 +1,13 @@
 .main-sort {
+    width: 800px;
     height: 38px;
     line-height: 38px;
     background: #f5f5f5;
     border: 1px solid #eaeaea;
     font-size: 14px;
+    i {
+        cursor: pointer;
+    }
     .sort_fl {
         float: left;
         span {
@@ -30,5 +34,64 @@
             float: left;
             text-align: center;
         }
+    }
+}
+.itembox {
+    width: 800px;
+    .box {
+        width: 800px;
+        display: flex;
+        flex-direction: row;
+        height: 206px;
+        margin-bottom: 10px;
+        position: relative;
+        border: 1px solid #cecece;
+    }
+    .box-r {
+        margin-left: 20px;
+        margin-top: 10px;
+        height: 206px;
+        a {
+            color: #999;
+            font-size: 14px;
+        }
+        .title {
+            margin-bottom: 6px;
+            a {
+                font-weight: 400;
+                color: #333;
+                font-size: 16px;
+            }
+        }
+        .time,
+        .where,
+        .time {
+            margin-bottom: 6px;
+            overflow: hidden;
+            white-space: nowrap;
+            text-overflow: ellipsis;
+            color: #999;
+        }
+
+        .price {
+            position: absolute;
+            bottom: 12px;
+            color: #999;
+            overflow: hidden;
+            a {
+                color: #ff1268;
+                font-weight: 700;
+                font-size: 16px;
+                margin-right: 20px;
+                font-style: normal;
+            }
+        }
+    }
+
+    a,
+    a img,
+    .box-l {
+        width: 153px;
+        height: 206px;
     }
 }
