--- a/src/sass/enroll.scss
+++ b/src/sass/enroll.scss
@@ -24,7 +24,7 @@ body {
     input {
         height: 30px;
     }
-    p:last-of-type {
+    .btn {
         width: 230px;
         height: 42px;
         background: #ff1268;
