--- a/src/sass/list.scss
+++ b/src/sass/list.scss
@@ -63,6 +63,9 @@
                 font-size: 16px;
             }
         }
+        .people {
+            margin-bottom: 10px;
+        }
         .time,
         .where,
         .time {
